1.通过TCK测试